--- a/DesignWeb/formulaire/css/style.css
+++ b/DesignWeb/formulaire/css/style.css
@@ -15,7 +15,9 @@ h2{
 .bgpouce{
     background-image: url("../img/pouce.png");
 }
+.text1{
+  font-size: 2.0rem;
+}
 .bg{
-    background-color: darkgrey;
-    color: darkgrey;
+    background-color: green;
 }
