--- a/DesignWeb/pokemonlist/css/style.css
+++ b/DesignWeb/pokemonlist/css/style.css
@@ -2,3 +2,12 @@ body,html{
     background-image: url("../background/1glegendaire.png");
     width: 100%;
 }
+#bgpokedex{
+    background-image: url("../pokemon/pokedex_fermer.png");
+    background-size: cover;
+    height: 400px;
+}
+#margineset{
+    margin-top: 130px;
+    margin-left: 150px;
+}
