--- a/DesignWeb/pokemonlist/css/style.css
+++ b/DesignWeb/pokemonlist/css/style.css
@@ -10,8 +10,8 @@ body,html{
 }
 
 #margineset{
-    margin-top: 130px;
-    margin-left: 150px;
+    margin-top: 121px;
+    margin-left: 140px;
 }
 button {
     color: #1D9AF2;
@@ -36,3 +36,134 @@ button:active{
     background-size: 100%;
     transition: background 0s;
 }
+
+
+
+
+/*****************************************************************************/
+.navbar {
+    background-color: #ba001f !important;
+}
+
+.navbar .navbar-brand {
+    color: #131010;
+}
+.navbar .navbar-brand:hover,
+.navbar .navbar-brand:focus {
+    color: #133fe7;
+}
+
+.navbar .navbar-text a {
+    color: #133fe7;
+}
+.navbar .navbar-text a:hover,
+.navbar .navbar-text a:focus {
+    color: #133fe7;
+}
+.navbar .navbar-nav .nav-link {
+    color: #131010;
+    border-radius: .25rem;
+    margin: 0 0.25em;
+}
+.navbar .navbar-nav .nav-link:not(.disabled):hover,
+.navbar .navbar-nav .nav-link:not(.disabled):focus {
+    color: #133fe7;
+}
+.navbar .navbar-nav .nav-item.active .nav-link,
+.navbar .navbar-nav .nav-item.active .nav-link:hover,
+.navbar .navbar-nav .nav-item.active .nav-link:focus,
+.navbar .navbar-nav .nav-item.show .nav-link,
+.navbar .navbar-nav .nav-item.show .nav-link:hover,
+.navbar .navbar-nav .nav-item.show .nav-link:focus {
+    color: #133fe7;
+    background-color: #000000;
+}
+.navbar .navbar-toggle {
+    border-color: #000000;
+}
+.navbar .navbar-toggle:hover,
+.navbar .navbar-toggle:focus {
+    background-color: #000000;
+}
+.navbar .navbar-toggle .navbar-toggler-icon {
+    color: #131010;
+}
+.navbar .navbar-collapse,
+.navbar .navbar-form {
+    border-color: #131010;
+}
+.navbar .navbar-link {
+    color: #131010;
+}
+.navbar .navbar-link:hover {
+    color: #133fe7;
+}
+
+@media (max-width: 575px) {
+    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item {
+        color: #131010;
+    }
+    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+        color: #133fe7;
+    }
+    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item.active {
+        color: #133fe7;
+        background-color: #000000;
+    }
+}
+
+@media (max-width: 767px) {
+    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item {
+        color: #131010;
+    }
+    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+        color: #133fe7;
+    }
+    .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item.active {
+        color: #133fe7;
+        background-color: #000000;
+    }
+}
+
+@media (max-width: 991px) {
+    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item {
+        color: #131010;
+    }
+    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+        color: #133fe7;
+    }
+    .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item.active {
+        color: #133fe7;
+        background-color: #000000;
+    }
+}
+
+@media (max-width: 1199px) {
+    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item {
+        color: #131010;
+    }
+    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+        color: #133fe7;
+    }
+    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item.active {
+        color: #133fe7;
+        background-color: #000000;
+    }
+}
+
+.navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item {
+    color: #131010;
+}
+.navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+.navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+    color: #133fe7;
+}
+.navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item.active {
+    color: #133fe7;
+    background-color: #000000;
+}
+/*****************************************************************************/
