--- a/DesignWeb/pokemonlist/css/style.css
+++ b/DesignWeb/pokemonlist/css/style.css
@@ -37,7 +37,10 @@ button:active{
     transition: background 0s;
 }
 
-
+/****************************************************************************/
+.navpokeball{
+    background-image: url(../pokemon/icons8-pokéball-2-48.png);
+}
 
 
 /*****************************************************************************/
