--- a/DesignWeb/pokemonlist/css/style.css
+++ b/DesignWeb/pokemonlist/css/style.css
@@ -1,6 +1,7 @@
-body,html{
+.bglegendaire1g{
     background-image: url("../background/1glegendaire.png");
     width: 100%;
+    height: 100%;
 }
 #bgpokedex{
     background-image: url("../pokemon/pokedex_fermer.png");
@@ -47,6 +48,11 @@ button:active{
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
+}
+.bgstarter{
+    background-image: url("../background/starter1g.jpg");
+    background: no-repeat;
     background-size: cover;
 }
 /*****************************************************************************/
